--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!doctype html>
-<html lang="en">
+
+<!DOCTYPE html>
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cms-system-landing</title>
+    <meta name="description" content="Система управления комплаенс-рисками - профессиональное решение для контроля закупок" />
+    <title>Compliance Risk Management System</title>
   </head>
   <body>
     <div id="root"></div>
